--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,21 @@
           </archive>
         </configuration>
       </plugin>
+
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-javadoc-plugin</artifactId>
+        <configuration>
+          <doclet>com.sun.tools.doclets.standard.Standard</doclet>
+          <aggregate>true</aggregate>
+          <links>
+            <link>http://download.oracle.com/javase/6/docs/api/</link>
+            <link>http://download.oracle.com/javaee/6/api/</link>
+            <link>http://static.springsource.org/spring-security/site/docs/3.0.x/apidocs</link>
+          </links>
+        </configuration>
+      </plugin>
+
     </plugins>
   </build>
 </project>
