--- a/pom.xml
+++ b/pom.xml
@@ -77,6 +77,23 @@
         </configuration>
       </plugin>
 
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>jaxb2-maven-plugin</artifactId>
+        <executions>
+          <execution>
+            <goals>
+              <goal>xjc</goal>
+            </goals>
+          </execution>
+        </executions>
+        <configuration>
+          <schemaDirectory>${basedir}/src/main/resources/xsd</schemaDirectory>
+          <packageName>com.ufp.security.identity.provider.data</packageName> <!-- The name of your generated source package -->
+          <outputDirectory>${basedir}/src/main/generated-source</outputDirectory>
+        </configuration>
+      </plugin>
+
     </plugins>
   </build>
 </project>
