--- a/pom.xml
+++ b/pom.xml
@@ -73,6 +73,7 @@
             <link>http://download.oracle.com/javase/6/docs/api/</link>
             <link>http://download.oracle.com/javaee/6/api/</link>
             <link>http://static.springsource.org/spring-security/site/docs/3.0.x/apidocs</link>
+            <link>http://static.springsource.org/spring/docs/3.0.5.RELEASE/javadoc-api/</link>
           </links>
         </configuration>
       </plugin>
