--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,17 @@
   <properties>
     <spring-security-version>3.0.5.RELEASE</spring-security-version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <jersey.version>1.6</jersey.version>
   </properties>
+
+  <repositories>
+    <repository>
+      <id>maven2-repository.dev.java.net</id>
+      <name>Java.net Repository for Maven</name>
+      <url>http://download.java.net/maven/2/</url>
+      <layout>default</layout>
+    </repository>
+  </repositories>
 
   <dependencies>
     <dependency>
@@ -39,6 +49,12 @@
       <version>1.2.16</version>
     </dependency>
 
+    <dependency>
+      <groupId>com.sun.jersey</groupId>
+      <artifactId>jersey-client</artifactId>
+      <version>${jersey.version}</version>
+    </dependency>
+    
   </dependencies>
 
   <build>
