--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <groupId>com.ufp</groupId>
   <artifactId>spring-security-identity</artifactId>
   <packaging>jar</packaging>
-  <version>1.0-SNAPSHOT</version>
+  <version>1.0</version>
   <name>spring-security-identity</name>
   <url>http://maven.apache.org</url>
 
