--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
     <spring-security-version>3.0.5.RELEASE</spring-security-version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <jersey.version>1.6</jersey.version>
-    <identity4j.version>1.0-SNAPSHOT</identity4j.version>
+    <identity4j.version>1.0</identity4j.version>
   </properties>
 
   <repositories>
@@ -20,6 +20,18 @@
       <id>maven2-repository.dev.java.net</id>
       <name>Java.net Repository for Maven</name>
       <url>http://download.java.net/maven/2/</url>
+      <layout>default</layout>
+    </repository>
+
+    <repository>
+      <releases>
+        <enabled>true</enabled>
+        <updatePolicy>always</updatePolicy>
+        <checksumPolicy>fail</checksumPolicy>
+      </releases>
+      <id>maven2-repository.ufp.com</id>
+      <name>ufpIdentity Repository for Maven</name>
+      <url>http://repo.ufp.com/maven2/</url>
       <layout>default</layout>
     </repository>
   </repositories>
